@@ -1550,18 +1550,51 @@ be set in order to use other cloud files providers.
 
 .SH A NOTE ON DROPBOX ACCESS
 .IP 1.
-"some_dir" must already exist in the Dropbox Application folder for
-this application, like "Apps/Duplicity/some_dir".
-.IP 2.
-The first run of the backend must be ineractive!
+First of all Dropbox backend requires valid authentication token. It
+should be passed via
+. B DPBX_ACCESS_TOKEN
+environment variable.
+.br
+To obtain it please create 'Dropbox API' application at:
+https://www.dropbox.com/developers/apps/create
+.br
+Then visit app settings and just use 'Generated access token' under
+OAuth2 section.
+.br
+Alternatively you can let duplicity generate access token itself. In such 
+case temporary export 
+.B DPBX_APP_KEY ","
+.B DPBX_APP_SECRET
+using values from app settings page and run duplicity interactively.
+.br
 It will print the URL that you need to open in the browser to obtain
-OAuth token for the application. The token will be saved in the file
-$HOME/.dropbox.token_store.txt and used in the future runs.
+OAuth2 token for the application. Just follow on-screen instructions and
+then put generated token to
+. B DPBX_ACCESS_TOKEN
+variable. Once done, feel free to unset
+.B DPBX_APP_KEY "and"
+.B DPBX_APP_SECRET
+
+.IP 2.
+"some_dir" must already exist in the Dropbox folder. Depending on access
+token kind it may be:
+.RS
+.RS
+. B Full Dropbox:
+path is absolute and starts from 'Dropbox' root folder.
+.br
+. B App Folder: 
+path is related to application folder. Dropbox client will show it in
+. B ~/Dropbox/Apps/<app-name>
+.RE
+.RE
+
 .IP 3.
 When using Dropbox for storage, be aware that all files, including the
-ones in the Apps folder, will be synced to all connected computers.
-You may prefer to use a separate Dropbox account specially for the
-backups, and not connect any computers to that account.
+ones in the Apps folder, will be synced to all connected computers.  You
+may prefer to use a separate Dropbox account specially for the backups,
+and not connect any computers to that account. Alternatively you can
+configure selective sync on all computers to avoid syncing of backup files
 
 .SH A NOTE ON EUROPEAN S3 BUCKETS
 Amazon S3 provides the ability to choose the location of a bucket upon
