@@ -81,6 +81,9 @@ New in v0.7.07 (2016/03/??)
     - added ssl_cacert_path support for python 2.7.9+
     - gettext wrapped all log messages
     - minor refinements
+* Applied patch from Dmitry Nezhevenko to upgrade dropbox backend:
+  - update to SDK v2
+  - use chunked upload
 
 
 New in v0.7.06 (2015/12/07)
